mas-crm/force-app/main/default/objects/Service_Agent__c/Service_Agent__c.object-meta.xml
<CustomObject>
    <label>Service Agent</label>
    <nameField>
        <label>Agent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>