mas-crm/force-app/main/default/objects/Service_Agent__c/fields/Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email ID</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>