mas-crm/force-app/main/default/objects/Service_Agent__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>AGT-{0000}</displayFormat>
    <label>Agent ID</label>
    <type>AutoNumber</type>
</CustomField>