mas-crm/force-app/main/default/objects/Service_Agent__c/fields/Service_Case__c.field-meta.xml
<CustomField>
    <fullName>Service_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Case</label>
    <referenceTo>Service_Case__c</referenceTo>
    <relationshipLabel>Service Agents</relationshipLabel>
    <relationshipName>Service_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>